--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,17 +19,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  line_awesome_flutter: ^1.0.1
+  firebase_remote_config: ^0.3.0+1
+
   cloud_firestore: ^0.13.0+1
   cached_network_image: ^2.0.0
-  shared_preferences: ^0.5.6+1
-  flutter_svg: ^0.17.1
-  url_launcher: ^5.4.1
   queries: ^0.1.14
   auto_size_text: ^2.1.0
-  google_maps_flutter: ^0.5.22
   webview_flutter: ^0.3.19+5
   google_fonts: ^0.3.7
+  youtube_player_flutter: ^6.0.3+2
+  carousel_slider: ^1.4.1
+  photo_view: ^0.9.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
