--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_remote_config: ^0.3.0+1
+  timeago: ^2.0.26
+  package_info: ^0.4.0+13
+  url_launcher: ^5.4.1
+  font_awesome_flutter: ^8.5.0
+  firebase_analytics: ^5.0.11
 
   cloud_firestore: ^0.13.0+1
   cached_network_image: ^2.0.0
@@ -38,6 +43,17 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.3"
+  flutter_native_splash: ^0.1.9
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/virus_logo.png"
+
+flutter_native_splash:
+  image: assets/virus_white.png
+  color: "8A2387"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -49,8 +65,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
