--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   url_launcher: ^5.4.1
   font_awesome_flutter: ^8.5.0
   firebase_analytics: ^5.0.11
+  device_preview: ^0.3.0+1
 
   cloud_firestore: ^0.13.0+1
   cached_network_image: ^2.0.0
